maybe fix scaling issues on iPhone

--- a/css/game.css
+++ b/css/game.css
@@ -6,7 +6,7 @@ html, body, ul, li {
 
 canvas {
   display: block;
-  width: 762;
+  width: 762px;
   margin: 0 auto;
   background-color: blue;
   image-rendering: optimizeSpeed;
@@ -29,6 +29,11 @@ body {
 html {
   overflow: hidden;
   height: 100%;
+}
+
+#page {
+  width: 762px;
+  margin: 0 auto;
 }
 
 .info {
